@@ -1,3 +1,7 @@
+[B]1.0.2:[/B]
+- opraveno zobrazování nově přidaných dílů
+- opraveno chybějící tlačítko "Next" při listování v dílech
+- opravena chyba při dekódování textu (sledujuserialy web je již v UTF-8)
 [B]1.0.1:[/B]
 - přidán seznam dnes přidaných dílů
 [B]1.0.0:[/B]
